- Header scroll fixed on mobile - Fixed some small images - Fixed some mobile responsibility

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ header li a {
     text-decoration: none;
     padding: 5px 15px;
     transition: 0.5s;
+    white-space: nowrap;
 }
 header li a:hover {
     color: var(--color-primary);
@@ -239,7 +240,7 @@ header .mobile {
     margin-bottom: 10vh;
 }
 .cards .content-image {
-    width: 20%;
+    width: 20vh;
     height: 100%;
 }
 .content-text h3 {
@@ -484,7 +485,7 @@ header .mobile {
     }
     .cards .content-image {
         margin-bottom: 5%;
-        width: 30%;
+        width: 50vw;
     }
     .project-hero {
         margin: 200px 10% 5% 10%;
@@ -500,6 +501,7 @@ header .mobile {
     }
     header .header-items #links {
         display: none;
+        margin: 0 10px;
     }
     header .header-items .mobile {
         width: 100%;
@@ -512,8 +514,11 @@ header .mobile {
         align-items: center;
         margin-bottom: 5%;
     }
+    .project-hero-title img {
+        margin: 0;
+    }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
     .hero .hero-text h1 {
         font-size: 40px;
     }
@@ -523,8 +528,6 @@ header .mobile {
     .project-hero-title h1 {
         font-size: 50px;
     }
-}
-@media screen and (max-width: 562px) {
     header .header-items {
         padding: 3vh 0;
     }
@@ -539,6 +542,9 @@ header .mobile {
     }
     .project-hero {
         margin: 250px 10% 5% 10%;
+    }
+    .project-hero-title img {
+        margin: 0 0 3vh 0;
     }
 }
 @media screen and (max-width: 280px) {
